# RapidImageProcessor

./: .gitignore  CMakeLists.txt
src/: main.cpp
